After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661451 - totem-pl-parser is not compatible with quvi-0.4
totem-pl-parser is not compatible with quvi-0.4
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
2.32.x
Other Linux
: Normal normal
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-11 11:27 UTC by Pacho Ramos
Modified: 2011-10-21 16:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Pacho Ramos 2011-10-11 11:27:56 UTC
As reported downstream at:
https://bugs.gentoo.org/show_bug.cgi?id=386651

totem-pl-parser is not compatible with quvi-0.4 and fails to build with 

totem-pl-parser-videosite.c: In function 'totem_pl_parser_add_videosite':
totem-pl-parser-videosite.c:78:2: error: 'quvi_video_t' undeclared (first use
in this function)
totem-pl-parser-videosite.c:78:2: note: each undeclared identifier is reported
only once for each function it appears in
totem-pl-parser-videosite.c:78:15: error: expected ';' before 'v'
totem-pl-parser-videosite.c:97:32: error: 'v' undeclared (first use in this
function)
totem-pl-parser-videosite.c:107:23: error: 'QUVIPROP_VIDEOURL' undeclared
(first use in this function)
totem-pl-parser-videosite.c:108:23: error: 'QUVIPROP_VIDEOFILELENGTH'
undeclared (first use in this function)
make[4]: *** [libtotem_plparser_la-totem-pl-parser-videosite.lo] Error 1

The following patch looks to fix this problem:
https://386651.bugs.gentoo.org/attachment.cgi?id=289447

Thanks
Comment 1 Pacho Ramos 2011-10-18 09:45:07 UTC
Is this patch ok for you?
Comment 2 Bastien Nocera 2011-10-21 15:39:24 UTC
commit 4e15c57a438ee900f6ce601810a59a316b039fa1
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Oct 21 16:36:26 2011 +0100

    lib: Require quvi 0.4.0
    
    And adapt API usage.
    
    Original patch by Marien Zwart in:
    https://bugs.gentoo.org/show_bug.cgi?id=386651
    
    https://bugzilla.gnome.org/show_bug.cgi?id=661451
Comment 3 Alexandre Rostovtsev 2011-10-21 15:51:15 UTC
(In reply to comment #2)
>     lib: Require quvi 0.4.0

Actually, with Marien's patch totem-pl-parser still builds and runs fine with >=quvi-0.2.15
Comment 4 Bastien Nocera 2011-10-21 16:10:19 UTC
(In reply to comment #3)
> (In reply to comment #2)
> >     lib: Require quvi 0.4.0
> 
> Actually, with Marien's patch totem-pl-parser still builds and runs fine with
> >=quvi-0.2.15

Indeed, fixed in master.