lib: Require quvi 0.4.0

And adapt API usage.

Original patch by Marien Zwart in:
https://bugs.gentoo.org/show_bug.cgi?id=386651

https://bugzilla.gnome.org/show_bug.cgi?id=661451